Fix row class negative margins overflowing width

--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -676,3 +676,7 @@ body[class*="schedule"] table.table.day2 tr:nth-of-type(15) {
 .w-full {
   width: 100%;
 }
+
+.section {
+  overflow: hidden;
+}
